<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeatSelection"
    android:orientation="vertical"
    android:background="@color/gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textAllCaps="true"
            android:textColor="@color/yellow"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/yellow"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="32dp"
            />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/row4"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
        android:layout_marginTop="@dimen/marginTopRadioGroup" >

        <RadioButton
            android:id="@+id/seat16"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/sixteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat17"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/seventeen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat18"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/eighteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat19"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/nineteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat20"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/twenty"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
        android:layout_marginTop="@dimen/marginTopRadioGroup" >

        <RadioButton
            android:id="@+id/seat11"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/eleven"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat12"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/twelve"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat13"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/thirteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat14"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/fourteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat15"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/fifteen"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
        android:layout_marginTop="@dimen/marginTopRadioGroup" >

        <RadioButton
            android:id="@+id/seat06"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/six"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat07"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/seven"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat08"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/eight"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat09"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/nine"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
        <RadioButton
            android:id="@+id/seat10"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/ten"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/horizontalPaddingRadioGroup"
        android:layout_marginTop="@dimen/marginTopRadioGroup" >

        <RadioButton
            android:id="@+id/seat01"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:background="@drawable/radio_selectable_2"
            android:button="@android:color/transparent"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/seat02"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/two"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat03"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/three"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat04"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/four"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />

        <RadioButton
            android:id="@+id/seat05"
            android:layout_width="@dimen/radioButton"
            android:layout_height="@dimen/radioButton"
            android:text="@string/five"
            android:textAlignment="center"
            android:layout_marginHorizontal="@dimen/horizontalMarginRadioButton"
            android:textColor="@color/gray"
            android:button="@android:color/transparent"
            android:background="@drawable/radio_selectable_2"
            android:textSize="@dimen/radioButtonText"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:background="@color/smallGray"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/screen"
        android:textSize="23sp"
        android:textStyle="italic"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/horizontalMarginRadioButton"
        >

        <ImageView
            android:layout_width="@dimen/radioSymbol"
            android:layout_height="@dimen/radioSymbol"
            android:background="@drawable/radio_normal"
            android:contentDescription="@string/available"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/smallGray"
            />

        <ImageView
            android:layout_width="@dimen/radioSymbol"
            android:layout_height="@dimen/radioSymbol"
            android:background="@drawable/radio_disabled"
            android:contentDescription="@string/notAvailable"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notAvailable"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/smallGray"
            />

        <ImageView
            android:layout_width="@dimen/radioSymbol"
            android:layout_height="@dimen/radioSymbol"
            android:background="@drawable/radio_selected_2"
            android:contentDescription="@string/yours"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yours"
            android:layout_gravity="center_vertical"
            android:textSize="13sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/smallGray"
            />
    </LinearLayout>


    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_yellow"
        android:textColor="@color/gray"
        android:text="@string/confirmButton"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="70dp"
        />
</LinearLayout>