<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".FilmDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/FilmImageDescription"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            />

        <TextView
            android:id="@+id/FilmNameDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/yellow"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="32dp"
            />

        <TextView
            android:id="@+id/FilmSinopsisDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:textSize="14sp"
            android:textColor="@color/yellow"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            />

        <TextView
            android:id="@+id/roomSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfSeats"
            android:layout_gravity="start"
            android:layout_marginStart="28dp"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            >

            <TextView
                android:id="@+id/roomLeftSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seatsLeft"
                android:layout_gravity="start"
                android:layout_marginStart="28dp"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/leftSeats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="20sp"
                android:textColor="@color/red"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/yellow"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="12dp"
            />

        <Button
            android:id="@+id/buyTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyTickets"
            android:background="@drawable/round_button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>